--- a/jobdelas/src/main/resources/templates/jb_company/criar-vagas.html
+++ b/jobdelas/src/main/resources/templates/jb_company/criar-vagas.html
@@ -12,8 +12,8 @@
     <section class="cointaner-principal">
         <div class="menu">
             <nav>
-                <a href="#"><i class="fas fa-building"></i> Cadastrar Empresa</a>
-                <a href="#"><i class="fas fa-plus-circle"></i> Cadastrar Vagas</a>
+                <a href="/jbcompany/empresas"><i class="fas fa-building"></i> Cadastrar Empresa</a>
+                <a href="/jbcompany/cadastrar/vagas"><i class="fas fa-plus-circle"></i> Cadastrar Vagas</a>
                 <a href="#"><i class="fas fa-search"></i> Buscar Vaga</a>
                 <a href="#"><i class="fas fa-search"></i> Buscar Empresa</a>
                 <a href="#"><i class="fas fa-users"></i> Visualizar Candidatos</a>
