--- a/jobdelas/src/main/resources/templates/jb_company/listar-empresas.html
+++ b/jobdelas/src/main/resources/templates/jb_company/listar-empresas.html
@@ -15,7 +15,7 @@
   <section class="cointaner-principal">
     <div class="menu">
       <nav>
-        <a href="#"><i class="fas fa-building"></i> Cadastrar Empresa</a>
+        <a href="/jbcompany/empresas"><i class="fas fa-building"></i> Cadastrar Empresa</a>
         <a href="#"><i class="fas fa-plus-circle"></i> Cadastrar Vagas</a>
         <a href="#"><i class="fas fa-search"></i> Buscar Vaga</a>
         <a href="#"><i class="fas fa-search"></i> Buscar Empresa</a>
