--- a/jobdelas/src/main/resources/static/css/jbcompany-empresas.css
+++ b/jobdelas/src/main/resources/static/css/jbcompany-empresas.css
@@ -1,38 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+ 
 * {
+    font-family: 'Quicksand', sans-serif;
+    outline: none !important;
+    margin: 0 ;
     padding: 0;
-    margin:0;
     list-style: none;
     text-decoration: none;
-  }
-  
-  body {
-    background: #fffafa;
-  }
-  
-  /* FORMULARIO =================================== */
-  
-  .cointaner-principal {
-    width: 100%;
-    max-width: 1050px;
-    height: 600px;
-    margin: 50px auto;
-    display: flex;
-    background: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-  }
-  
-  .menu {
-    background-color: #B378FF;
-    width: 38%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-  }
-  
+}
+
+body {
+  background: #ffffff;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  height: 100vh; 
+  margin: 0; 
+  overflow: hidden;
+}
+
+
+
+/* FORMULARIO =================================== */
+
+.cointaner-principal {
+  width: 90%;
+  height: 600px;
+  display: flex;
+  border-radius: 30px 0px 0px 30px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  border: 1px solid #B378FF ;
+}
+
+.menu {
+  background-color: #B378FF;
+  width: 38%;
+  position: relative;
+  display: flex;
+  border-radius: 30px 0px 0px 30px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
   .menu nav {
     display: flex;
     flex-direction: column;
@@ -144,11 +154,11 @@
 
   
   #botao-formulario {
-    width: 200px;
-    height: 30px;
+    width: 150px;
+    height: 40px;
     text-transform: uppercase;
-    background-color: #fff;
-    color: #B378FF;
+    background-color: #B378FF;
+    color: #ffffff;
     border-radius: 10px;
     border: 1px solid #B378FF;
     cursor: pointer;
@@ -156,7 +166,7 @@
   }
   
   #botao-formulario:hover {
-    background-color: #B378FF;
+    background: linear-gradient(to bottom, #B378FF 75%, #ffffff 25%);
     color: #fff;
   }
   
@@ -210,7 +220,9 @@
 .card-title {
     font-size: 1.5em;
     background-color: #B378FF;
-    padding: 5px;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 10px;
     color: #fff;
     width: 100%;
 }
@@ -222,6 +234,10 @@
    border-radius: 5px;
    cursor: pointer;
    padding: 5px 10px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   gap:5px;
 } 
 
 .card-button:hover {
@@ -231,10 +247,11 @@
 
 .form_corpo_cards {
   width: 62%;
-  padding: 30px;
   display: flex;
   flex-wrap: wrap;
-  overflow-y: auto;
+  overflow-y: scroll;
+  justify-content: center;
+  padding: 20px;
 }
 
 .listar h2 {
@@ -260,4 +277,21 @@ select#status_vaga {
   border: 1px solid #B378FF;
   height: 30px;
   border-radius: 13px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #B378FF;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #B378FF;
 }
