--- a/jobdelas/src/main/resources/static/css/jbcompany-empresas.css
+++ b/jobdelas/src/main/resources/static/css/jbcompany-empresas.css
@@ -295,3 +295,50 @@ select#status_vaga {
 ::-webkit-scrollbar-thumb:hover {
   background: #B378FF;
 }
+
+
+/* Home do jb company */
+
+.cards-escolha-jbcompany {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap:30px;
+  width: 62%;
+  align-items: center;
+}
+
+.cards-escolha-jbcompany h1 {
+  font-size: 35px;
+  color: #B378FF;
+
+}
+.cards-escolha-jbcompany button {
+  width: 200px;
+  height: 70px;
+  border: 1px solid #B378FF;
+ 
+  border-radius: 5px;
+  padding: 15px;
+  cursor: pointer;
+  background-color: #fff;
+  color: #B378FF;
+
+}
+
+.cards-escolha-jbcompany button:hover {
+ color: #fff;
+  background-color: #B378FF;
+
+}
+
+.cards-escolha-jbcompany button i {
+  font-size: 25px;
+}
+.cards-escolha-jbcompany button p {
+  font-size: 20px;
+}
+
+
+
+/* Fim do jb company */
