--- a/jobdelas/src/main/resources/templates/jb_company/criar-vagas.html
+++ b/jobdelas/src/main/resources/templates/jb_company/criar-vagas.html
@@ -11,6 +11,7 @@
     <section class="cointaner-principal">
       <div class="menu">
         <nav>
+          <a href="/jbcompany"><i class="fas fa-home"></i> Home </a>
           <a href="/jbcompany/cadastrar/empresas"
             ><i class="fas fa-building"></i> Cadastrar Empresa</a
           >
